--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-REACT_APP_ODOO_API_KEY="2dfc83b11f20edb44ba1274e8d6b68d6142c337d"
-REACT_APP_LEGACY_URL="/my/home"
-REACT_APP_HOST_ENDPOINT="https://safecoms-pdpa-demo-staging.odoo.com"
+REACT_APP_ODOO_API_KEY=<API_KEY>
+REACT_APP_LEGACY_URL=<INDEX_PATH>
+REACT_APP_HOST_ENDPOINT=<HOSTNAME>
